fix: add location when registering car
